<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.calnotaapp.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app"
        android:textSize="30dp"
        android:gravity="center"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Npracticas"
            android:textSize="25dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="italic"
            android:id="@+id/ePracticas"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Nava1"
            android:textSize="25dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="italic"
            android:id="@+id/eAvance1"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Nava2"
            android:textSize="25dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="italic"
            android:id="@+id/eAvance2"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Nava3"
            android:textSize="25dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="italic"
            android:id="@+id/eAvance3"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Nappf"
            android:textSize="25dp"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="italic"
            android:id="@+id/eAppf"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Calcular"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:id="@+id/bCalcular" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Nfinal"
            android:textSize="25dp"
            android:textStyle="italic"
            android:gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="25dp"
            android:id="@+id/eNotaf"/>

    </LinearLayout>

</LinearLayout>
